--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIP Calculator</title>
-  <link ></link>
-  
+  <title>SIP Calculator Free Online Tool</title>
+ <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -42,8 +41,7 @@
     <div class="footer">© 2024 Vip Calculator. All Rights Reserved.</div>
   </div>
 
-  <script>
-  
-  </script>
+  <script src="scripts.js"></script>
+
 </body>
 </html>
