--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SIP Calculator Free Online Tool</title>
- <link rel="stylesheet" href="/styles.css">
+ <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -41,7 +41,7 @@
     <div class="footer">© 2024 Vip Calculator. All Rights Reserved.</div>
   </div>
 
-  <script src="/scripts.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
