--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="charts">
       <canvas id="bar-chart"></canvas>
     </div>
-    <div class="footer">© 2024 Vip Calculator. All Rights Reserved.</div>
+    <footer class="footer">© 2024 Vip Calculator. All Rights Reserved.</footer>
   </div>
 
   <script src="script.js"></script>
