--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIP Calculator Free Online Tool</title>
+  <title>Free SIP Calculator Online Tool</title>
+   <meta name="description" content="A SIP calculator (Systematic Investment Plan calculator) is a handy online tool designed to help investors estimate the potential returns on their monthly investments in mutual funds.">
+  <meta name="keywords" content="Sip Calculator, Vip Calculator">
+  <meta name="author" content="Vip Calculator">
  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
