--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="calculator-container">
-    <h1 class="header">SIP Calculator Free Online Tool</h1>
+    <h1 class="header">Free SIP Calculator Online Tool</h1>
     <div class="content">
       <div class="block input-block">
         <label for="sip-amount">SIP Amount (₹):</label>
