--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <canvas id="bar-chart"></canvas>
     </div>
 
-    <p>A SIP calculator (Systematic Investment Plan calculator) is a handy online tool designed to help investors estimate the potential returns on their monthly investments in mutual funds. By inputting details like the investment amount, tenure, and expected rate of return, you can get a rough idea of the maturity amount you may achieve over time.</p>
+    <p>A <a href="https://vipcalculator.com/calculator/sip-calculator.php">SIP calculator</a> (Systematic Investment Plan calculator) is a handy online tool designed to help investors estimate the potential returns on their monthly investments in mutual funds. By inputting details like the investment amount, tenure, and expected rate of return, you can get a rough idea of the maturity amount you may achieve over time.</p>
     <p> Many financial platforms, such as Angel One and ET Money, provide free SIP calculators, making it easy to quickly forecast the future value of your SIPs and plan your investments effectively. This tool is ideal for those looking to understand how regular contributions can grow their wealth through mutual fund investments.</p>
     <footer class="footer">© 2024 Vip Calculator. All Rights Reserved.</footer>
   </div>
